--- a/src/assets/css/blocks/section.css
+++ b/src/assets/css/blocks/section.css
@@ -1,3 +1,7 @@
+.section > .curve {
+  transform: translateY(-1px);
+}
+
 .section > .curve:first-child {
   transform: rotate(180deg) translateY(-1px);
 }
